--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="./style/navbar.css">
 </head>
 <body>
+    <nav id="navbar" role="navigation">
+        <div class="container">
+            <div class="navbar__wrapper">
+                <div class="navbar__logo"></div>
+                <div class="navbar__menu">
+                    <div class="navbar__home navbar__menu--item"><p>Home</p></div>
+                    <div class="navbar__explore navbar__menu--item"><p>Explore</p></div>
+                    <div class="navbar__activity navbar__menu--item"><p>Activity</p></div>
+                    <div class="navbar__community navbar__menu--item"><p>Community</p></div>
+                    <div class="navbar__pages navbar__menu--item"><p>Pages</p></div>
+                    <div class="navbar__contact navbar__menu--item"><p>Contact</p></div>
+                </div>
+                <div class="navbar__search"></div>
+                <div class="navbar__wallet"></div>
+                <div class="navbar__dark"></div>
+            </div>
+        </div>
+    </nav>
     
 </body>
 </html>
