--- a/index.html
+++ b/index.html
@@ -9,30 +9,213 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="./style/layout.css">
     <link rel="stylesheet" href="./style/navbar.css">
+    <link rel="stylesheet" href="./style/hero.css">
+    <link rel="stylesheet" href="./style/auctions.css">
 </head>
 <body>
     <nav id="navbar" role="navigation">
         <div class="container">
-            <div class="navbar__wrapper">
+            <li class="navbar__wrapper">
                 <div class="navbar__logo">
                     <img src="./assets/axies-images/01_header/logo_dark.png" alt="">
                 </div>
-                <div class="navbar__menu">
-                    <div class="navbar__home navbar__menu--item"><p>Home</p><i class="fa-solid fa-chevron-down"></i></div>
-                    <div class="navbar__explore navbar__menu--item"><p>Explore</p><i class="fa-solid fa-chevron-down"></i></div>
-                    <div class="navbar__activity navbar__menu--item"><p>Activity</p><i class="fa-solid fa-chevron-down"></i></div>
-                    <div class="navbar__community navbar__menu--item"><p>Community</p><i class="fa-solid fa-chevron-down"></i></div>
-                    <div class="navbar__pages navbar__menu--item"><p>Pages</p><i class="fa-solid fa-chevron-down"></i></div>
-                    <div class="navbar__contact navbar__menu--item"><p>Contact</p><i class="fa-solid fa-chevron-down"></i></div>
-                </div>
+                <ul class="navbar__menu">
+                    <li class="navbar__home navbar__menu--item"><p>Home</p><i class="fa-solid fa-chevron-down"></i></li>
+                    <li class="navbar__explore navbar__menu--item"><p>Explore</p><i class="fa-solid fa-chevron-down"></i></li>
+                    <li class="navbar__activity navbar__menu--item"><p>Activity</p><i class="fa-solid fa-chevron-down"></i></li>
+                    <li class="navbar__community navbar__menu--item"><p>Community</p><i class="fa-solid fa-chevron-down"></i></li>
+                    <li class="navbar__pages navbar__menu--item"><p>Pages</p><i class="fa-solid fa-chevron-down"></i></li>
+                    <li class="navbar__contact navbar__menu--item"><p>Contact</p><i class="fa-solid fa-chevron-down"></i></li>
+                </ul>
                 <div class="navbar__search"><i class="fa-solid fa-magnifying-glass"></i></div>
                 <div class="navbar__wallet">
-                    <button class="btn btn__primary"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
+                    <button class="btn btn__primary btn__walelt"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
                 </div>
-                <div class="navbar__dark"></div>
+                <div class="navbar--modes">
+                    <img class="navbar__button--light btn" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
+                    <img class="navbar__button--dark btn" src="./assets/axies-images/01_header/moon-2.png" alt="dark-mode">
+                </div>
             </div>
         </div>
     </nav>
     
+                            <!-- hero -->
+
+
+<section id="hero">
+    <div class="container">
+        <div class="hero__wrapper">
+            <div class="hero__item--left">
+                <h1 class="hero__title">Discover and collect <br/>extraordinary <br/> <p class="word-monster">Monster</p> NFT's</h1>
+                <p class="secondary-text">Marketplace for Monster Character Collections Non Fngible Token NFT's</p>
+                <div class="hero__btns">
+                    <button class="hero__btn hero__explore btn btn__primary"><i class="fa-solid fa-rocket"></i> Explore</button>
+                    <button class="hero__btn hero__create btn btn__primary"><i class="fa-solid fa-plus"></i> Create</button>
+                </div>
+            </div>
+            <div class="hero__item--right">
+                <img class="hero__rabbit hero__img" src="./assets/axies-images/02_hero/imgslider2.png" alt="space bunny">
+                <img class="hero__blob hero__img" src="./assets/axies-images/02_hero/Blob Shape.svg" alt="blob">
+                <img class="hero__ellipse--1 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
+                <img class="hero__ellipse--2 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
+                <img class="hero__planet hero__img"src="./assets/axies-images/02_hero/planet.svg" alt="planet">
+                <img class="hero__plus--1 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="">
+                <img class="hero__plus--2 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="">
+            </div>
+        </div>
+        <div class="hero__wrapper--2">
+            <div class="hero__menu hero__menu--1">
+                <i class="fa-solid fa-wallet"></i>
+                <h3>Set Up Your Wallet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vitae sapiente accusamus cumque pariatur reprehenderit.</p>
+            </div>
+
+            <div class="hero__menu hero__menu--2">
+                <i class="fa-solid fa-table-cells-large"></i>
+                <h3>Maintain Your Wallet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vitae sapiente accusamus cumque pariatur reprehenderit.</p>
+            </div>
+
+            <div class="hero__menu hero__menu--3">
+                <i class="fa-solid fa-image"></i>
+                <h3>Add Your NFT's</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vitae sapiente accusamus cumque pariatur reprehenderit.</p>
+            </div>
+
+            <div class="hero__menu hero__menu--4">
+                <i class="fa-solid fa-bookmark"></i>
+                <h3>List Them For Sale</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vitae sapiente accusamus cumque pariatur reprehenderit.</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+<section id="live-auctions">
+    <div class="container">
+        <div class="auctions__wrapper">
+            <div class="auctions__title">
+                <h2>Live Auctions</h2>
+                <a href="#">Explore More</a>
+            </div>
+
+            <div class="auctions__items">
+                <div class="auctions__item--1 auctions__item">
+                    <div class="item__wrapper--1">
+                        <div class="item__countdown--1">
+                            <i class="fa-solid fa-clock"></i>
+                            <p>5:23:22:08</p>
+                        </div>
+                    </div>
+                    <h5>"Hamlet Contemplates Yorick's...</h5>
+                    <div class="auctions__creator">
+                        <img src="./assets/axies-images/04_Top Seller/avt-7.jpg" alt="avatar">
+                        <p>Creator <br/> SalvadorDali</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="bid">
+                        <div class="bid__price">
+                            <p>Current Bid</p>
+                            <h4>4.89 ETH = $12.246</h4>
+                        </div>
+                        <div class="likes">
+                            <i class="fa-solid fa-heart"></i>
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="auctions__item--2 auctions__item">
+                    <div class="item__wrapper--2">
+                        <div class="item__countdown--2">
+                            <i class="fa-solid fa-clock"></i>
+                            <p>5:23:22:08</p>
+                        </div>
+                    </div>
+                    <h5>"Hamlet Contemplates Yorick's...</h5>
+                    <div class="auctions__creator">
+                        <img src="./assets/axies-images/04_Top Seller/avt-7.jpg" alt="avatar">
+                        <p>Creator <br/> SalvadorDali</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="bid">
+                        <div class="bid__price">
+                            <p>Current Bid</p>
+                            <h4>4.89 ETH = $12.246</h4>
+                        </div>
+                        <div class="likes">
+                            <i class="fa-solid fa-heart"></i>
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="auctions__item--3 auctions__item">
+                    <div class="item__wrapper--3">
+                        <div class="item__countdown--3">
+                            <i class="fa-solid fa-clock"></i>
+                            <p>5:23:22:08</p>
+                        </div>
+                    </div>
+                    <h5>"Hamlet Contemplates Yorick's...</h5>
+                    <div class="auctions__creator">
+                        <img src="./assets/axies-images/04_Top Seller/avt-7.jpg" alt="avatar">
+                        <p>Creator <br/> SalvadorDali</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="bid">
+                        <div class="bid__price">
+                            <p>Current Bid</p>
+                            <h4>4.89 ETH = $12.246</h4>
+                        </div>
+                        <div class="likes">
+                            <i class="fa-solid fa-heart"></i>
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="auctions__item--4 auctions__item ">
+                    <div class="item__wrapper--4">
+                        <div class="item__countdown--4">
+                            <i class="fa-solid fa-clock"></i>
+                            <p>5:23:22:08</p>
+                        </div>
+                    </div>
+                    <h5>"Hamlet Contemplates Yorick's...</h5>
+                    <div class="auctions__creator">
+                        <img src="./assets/axies-images/04_Top Seller/avt-7.jpg" alt="avatar">
+                        <p>Creator <br/> SalvadorDali</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="bid">
+                        <div class="bid__price">
+                            <p>Current Bid</p>
+                            <h4>4.89 ETH = $12.246</h4>
+                        </div>
+                        <div class="likes">
+                            <i class="fa-solid fa-heart"></i>
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+            <div class="slider">
+                <i class="fa-solid fa-arrow-left"></i>
+                <i class="fa-solid fa-circle-dot"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="collection">
+    
+</section>
 </body>
-</html>
+</html> 
