--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                 <img class="hero__ellipse--1 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
                 <img class="hero__ellipse--2 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
                 <img class="hero__planet hero__img"src="./assets/axies-images/02_hero/planet.svg" alt="planet">
-                <img class="hero__plus--1 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="">
-                <img class="hero__plus--2 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="">
+                <img class="hero__plus--1 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <img class="hero__plus--2 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <img class="hero__plus--3 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <img class="hero__plus--4 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
             </div>
         </div>
         <div class="hero__wrapper--2">
@@ -215,7 +217,21 @@
 </section>
 
 <section id="collection">
-    
+    <div class="container">
+        <div class="collection__wrapper">
+            <div class="collection__item collection__item--1">
+                <div class="first-row">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <div class="second-row">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 </body>
 </html> 
