--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/hero.css">
     <link rel="stylesheet" href="./style/auctions.css">
     <link rel="stylesheet" href="./style/collection.css">
+    <link rel="stylesheet" href="./style/seller.css">
 </head>
 <body>
     <nav id="navbar" role="navigation">
@@ -224,7 +225,7 @@
                 <i class="fa-solid fa-circle"></i>
                 <i class="fa-solid fa-circle"></i>
             </div>
-            <div class="explore">
+            <div class="explore btn__primary btn">
                 <a href="#">Explore More</a>
             </div>
         </div>
@@ -235,30 +236,254 @@
 
 <section id="collection">
     <div class="container">
+        
         <div class="collection__wrapper">
             <div class="collection__title">
                 <h2>Popular Collection</h2>
             </div>
+
+
+            <div class="collection__items">
             <div class="collection__item collection__item--1">
                 <div class="first-row">
-                    <img src="./assets/axies-images/06_Popular Collection/box1/collection-item-2.jpg" alt="collection">
-                    <img src="./assets/axies-images/06_Popular Collection/box2/img-collection24.jpg" alt="">
+                    <div class="collection__img--1 collection__img"></div>
+                    <div class="collection__img--2 collection__img"></div>
                 </div>
                 <div class="second-row">
-                    <img src="./assets/axies-images/06_Popular Collection/box1/collection-item-bottom-4.jpg" alt="collection">
-                    <img src="./assets/axies-images/06_Popular Collection/box1/collection-item-top-1.jpg" alt="collection">
-                    <img src="./assets/axies-images/06_Popular Collection/box1/collection-item-top-2.jpg" alt="collection">
+                    <div class="collection__img--3 collection__img"></div>
+                    <div class="collection__img--4 collection__img"></div>
+                    <div class="collection__img--5 collection__img"></div>
                 </div>
                 <div class="collection__creator">
-                    <img src="" alt="">
+                    <img src="./assets/axies-images/04_Top Seller/avt-5.jpg" alt="popular creator">
+                    <div class="creator__text">
                     <h3>Creative Art Collections</h3>
                     <span class="collection__created"><p>Created by</p></span>
                     <span class="collection__creator--name">Relph Garraway</span>
+                    </div>
                     <div class="likes">
                         <i class="fa-solid fa-heart"></i>
                         <p>100</p>
                     </div>
                 </div>
+            </div>
+            <div class="collection__item collection__item--2">
+                <div class="first-row">
+                    <div class="collection__img--6 collection__img"></div>
+                    <div class="collection__img--7 collection__img"></div>
+                </div>
+                <div class="second-row">
+                    <div class="collection__img--8 collection__img"></div>
+                    <div class="collection__img--9 collection__img"></div>
+                    <div class="collection__img--10 collection__img"></div>
+                </div>
+                <div class="collection__creator">
+                    <img src="./assets/axies-images/04_Top Seller/avt-2.jpg" alt="popular creator">
+                    <div class="creator__text">
+                        <h3>Creative Art Collections</h3>
+                        <span class="collection__created"><p>Created by</p></span>
+                        <span class="collection__creator--name">Relph Garraway</span>
+                    </div>
+                    <div class="likes">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>100</p>
+                    </div>
+                </div>
+            </div>
+            <div class="collection__item collection__item--3">
+                <div class="first-row">
+                    <div class="collection__img--11 collection__img"></div>
+                    <div class="collection__img--12 collection__img"></div>
+                </div>
+                <div class="second-row">
+                    <div class="collection__img--13 collection__img"></div>
+                    <div class="collection__img--14 collection__img"></div>
+                    <div class="collection__img--15 collection__img"></div>
+                </div>
+                <div class="collection__creator">
+                    <img src="./assets/axies-images/04_Top Seller/avt-3.jpg" alt="popular creator">
+                    <div class="creator__text">
+                        <h3>Creative Art Collections</h3>
+                        <span class="collection__created"><p>Created by</p></span>
+                        <span class="collection__creator--name">Relph Garraway</span>
+                    </div>
+                    <div class="likes">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>100</p>
+                    </div>
+                </div>
+            </div>
+            </div>            
+            <div class="explore btn__primary btn">
+                <a href="#">Explore More</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- top seller  -->
+<section class="seller">
+    <div class="container">
+        <div class="seller__wrapper">
+            <div class="seller__title">
+                <h2>Top Seller</h2>
+            </div>
+            <div class="seller__row--1">
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-1.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-2.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Windsor Lane</h4>
+                            <p>120.7 ETH</p>
+                    </div>
+                </div>
+
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-3.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Blake Banks</h4>
+                            <p>68.2 ETH</p>
+                    </div>
+                </div>
+
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-4.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-5.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+            </div>
+            <div class="seller__row--2">
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-6.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-7.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-8.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-9.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+                <div class="seller__card">
+                    <div class="seller-img">
+                        <img class="seller__avatar" src="./assets/axies-images/04_Top Seller/avt-6.jpg" alt="avatar">
+                    </div>
+                    <div class="seller__text">
+                            <h4>Crispin Berry</h4>
+                            <p>214.2 ETH</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Today's Picks -->
+<section id="today">
+    <div class="container">
+        <div class="today__wrapper">
+            <div class="today__title">
+               <h2>Today's Picks</h2>
+            </div>
+            <div class="today__sort">
+                    <button class="category secondary-btn">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                        <p>Category</p>
+                    </button>
+                    <button class="price secondary-btn">
+                        <i class="fa-solid fa-dollar-sign"></i>
+                        <p>Price Range</p>
+                    </button>
+                    <button class="sale secondary-btn">
+                        <i class="fa-solid fa-bolt"></i>
+                        <p>Sale</p>
+                    </button>
+                    <button class="blockchain secondary-btn">
+                        <i class="fa-solid fa-cube"></i>
+                        <p>Blockchain</p>
+                    </button>
+                    <button class="sort-by secondary-btn">
+                        <i class="fa-solid fa-bars"></i>
+                        <p>Sort by: Recently Added</p>
+                    </button>
+            </div>
+            <div class="today__row--1">
+                <div class="seller__item--1 seller__item">
+                    <div class="seller__wrapper--1">
+                        <a class="bid">
+                            <i class="fa-solid fa-tag"></i> <p>Place Bid</p>
+                        </a>
+                    </div>
+                    <h5>"Hamlet Contemplates Yorick's...</h5>
+                    <div class="auctions__creator">
+                        <img src="./assets/axies-images/04_Top Seller/avt-7.jpg" alt="avatar">
+                        <p>Creator <br/> SalvadorDali</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="current-bid">
+                        <div class="bid__price">
+                            <p>Current Bid</p>
+                            <h4>4.89 ETH = $12.246</h4>
+                        </div>
+                        <div class="history">
+                            <i class="fa-solid fa-clock-rotate-left"></i>
+                            <p>View History</p>
+                        </div>
+                    </div>
+                </div> 
             </div>
         </div>
     </div>
