--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
                 <div class="navbar__search"><i class="fa-solid fa-magnifying-glass"></i></div>
                 <div class="navbar__wallet">
-                    <button class="btn btn__primary btn__walelt"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
+                    <button class="btn btn__primary btn__wallet"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
                 </div>
                 <div class="navbar--modes">
                     <img class="navbar__button--light btn" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
@@ -63,11 +63,19 @@
                 <img class="hero__blob hero__img" src="./assets/axies-images/02_hero/Blob Shape.svg" alt="blob">
                 <img class="hero__ellipse--1 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
                 <img class="hero__ellipse--2 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
+                <img class="hero__ellipse--3 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
+                <img class="hero__ellipse--4 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
                 <img class="hero__planet hero__img"src="./assets/axies-images/02_hero/planet.svg" alt="planet">
                 <img class="hero__plus--1 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
                 <img class="hero__plus--2 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
                 <img class="hero__plus--3 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
                 <img class="hero__plus--4 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <img class="hero__plus--5 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <img class="hero__star--1 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
+                <img class="hero__star--2 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
+                <img class="hero__star--3 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
+                <img class="hero__star--4 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
+                <img class="hero__star--5 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
             </div>
         </div>
         <div class="hero__wrapper--2">
