--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./style/seller.css">
     <link rel="stylesheet" href="./style/today.css">
     <link rel="stylesheet" href="./style/footer.css">
+    <link rel="stylesheet" href="./style/MQ.css">
 </head>
 <body>
     <nav id="navbar" role="navigation">
@@ -235,9 +236,9 @@
                 <i class="fa-solid fa-circle"></i>
                 <i class="fa-solid fa-circle"></i>
             </div>
-            <div class="explore btn__primary btn">
+            <button class="btn explore btn__primary">
                 <a href="#">Explore More</a>
-            </div>
+            </button>
         </div>
     </div>
 </section>
@@ -249,6 +250,7 @@
         
         <div class="collection__wrapper">
             <div class="collection__title">
+                <img src="./assets/axies-images/monsters/monster2.png" alt="">
                 <h2>Popular Collection</h2>
             </div>
 
@@ -324,9 +326,9 @@
                 </div>
             </div>
             </div>            
-            <div class="explore btn__primary btn">
+            <button class="explore btn__primary btn">
                 <a href="#">Explore More</a>
-            </div>
+            </button>
         </div>
     </div>
 </section>
@@ -448,24 +450,25 @@
             <div class="today__title">
                <h2>Today's Picks</h2>
             </div>
+            <div class="today__monster"><img src="./assets/axies-images/monsters/monster1.png" alt="monster"></div>
             <div class="today__sort">
-                    <button class="category secondary-btn">
+                    <button class="category btn btn__secondary">
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                         <p>Category</p>
                     </button>
-                    <button class="price secondary-btn">
+                    <button class="price btn btn__secondary">
                         <i class="fa-solid fa-dollar-sign"></i>
                         <p>Price Range</p>
                     </button>
-                    <button class="sale secondary-btn">
+                    <button class="sale btn btn__secondary">
                         <i class="fa-solid fa-bolt"></i>
                         <p>Sale</p>
                     </button>
-                    <button class="blockchain secondary-btn">
+                    <button class="blockchain btn btn__secondary">
                         <i class="fa-solid fa-cube"></i>
                         <p>Blockchain</p>
                     </button>
-                    <button class="sort-by secondary-btn">
+                    <button class="sort-by btn btn__secondary">
                         <i class="fa-solid fa-bars"></i>
                         <p>Sort by: Recently Added</p>
                     </button>
