--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <button class="btn btn__primary btn__wallet"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
                 </div>
                 <div class="navbar--modes">
-                    <img class="navbar__button--light btn" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
-                    <img class="navbar__button--dark btn" src="./assets/axies-images/01_header/moon-2.png" alt="dark-mode">
+                    <img class="navbar__button--light btn__secondary btn" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
+                    <img class="navbar__button--dark btn__secondary btn" src="./assets/axies-images/01_header/moon-2.png" alt="dark-mode">
                 </div>
             </div>
         </div>
