--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                     <button class="btn btn__primary btn__wallet"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
                 </div>
                 <div class="navbar--modes">
-                    <img class="navbar__button--light btn__secondary btn" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
-                    <img class="navbar__button--dark btn__secondary btn" src="./assets/axies-images/01_header/moon-2.png" alt="dark-mode">
+                    <img class="navbar__button--light btn__secondary btn" onclick="toggleTheme()" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
                 </div>
             </div>
         </div>
@@ -124,8 +123,8 @@
                             <i class="fa-solid fa-tag"></i> <p>Place Bid</p>
                         </a>
                         <div class="item__countdown--1 item__countdown">
-                            <i class="fa-solid fa-clock"></i>
-                            <p>5 : 23 : 22 : 08</p>
+                            <i class="fa-solid fa-clock"> </i>
+                            <p> 5 : 23 : 22 : 08</p>
                         </div>
                     </div>
                     <h5>"Hamlet Contemplates Yorick's...</h5>
@@ -326,7 +325,7 @@
                 </div>
             </div>
             </div>            
-            <button class="explore btn__primary btn">
+            <button class="explore-collection btn__primary btn">
                 <a href="#">Explore More</a>
             </button>
         </div>
@@ -712,7 +711,7 @@
             </div>
 
             <div class="load-more">
-                <button class="btn btn-primary">Load More</button>
+                <button class="btn btn__primary">Load More</button>
             </div>
         </div>
     </div>
