--- a/home.html
+++ b/home.html
@@ -7,15 +7,15 @@
     <title>NFT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js"></script>
-    <link rel="stylesheet" href="./style/layout.css">
-    <link rel="stylesheet" href="./style/MQ.css">
-    <link rel="stylesheet" href="./style/navbar.css">
-    <link rel="stylesheet" href="./style/hero.css">
-    <link rel="stylesheet" href="./style/auctions.css">
-    <link rel="stylesheet" href="./style/collection.css">
-    <link rel="stylesheet" href="./style/seller.css">
-    <link rel="stylesheet" href="./style/today.css">
-    <link rel="stylesheet" href="./style/footer.css">
+    <link rel="stylesheet" href="./style/home/layout.css">
+    <link rel="stylesheet" href="./style/home/MQ.css">
+    <link rel="stylesheet" href="./style/home/navbar.css">
+    <link rel="stylesheet" href="./style/home/hero.css">
+    <link rel="stylesheet" href="./style/home/auctions.css">
+    <link rel="stylesheet" href="./style/home/collection.css">
+    <link rel="stylesheet" href="./style/home/seller.css">
+    <link rel="stylesheet" href="./style/home/today.css">
+    <link rel="stylesheet" href="./style/home/footer.css">
     
 </head>
 <body>
