login page started
added html for login page
prefinal basic structure

--- a/login.html
+++ b/login.html
@@ -5,10 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel="stylesheet" href="./style/layout.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/general/layout.css">
+    <link rel="stylesheet" href="style/login/login.css">
 </head>
 <body>
-    
+  <main id="main">
+    <div class="container">
+        <div class="login-page">
+            <div class="img">
+                <img src="" alt="">
+            </div>
+            <div class="login__text">
+                <div class="login__title"><h1>Sign In</h1>
+                </div>
+                <div class="login__email-and-password">
+                    <div class="email">
+                        <h4>Email</h4>
+                        <input type="text">
+                    </div>
+                    <div class="password">
+                        <h4>Password</h4>
+                        <input type="password">
+                    </div>
+                </div>
+                <div class="sign-in">
+                    <button class="sign-in__btn">Sign In</button>
+                </div>
+                <h5>New on our platform? <a class="create-account" href="#">Create an account</a></h5>
+                <div class="or-box">
+                    <span class="left-or"></span>
+                    <p>or</p>
+                    <span class="right-or"></span>
+                </div>
+            </div>
+            <div class="social">
+                
+            </div>
+        </div>
+    </div>
+  </main>  
 </body>
 </html>
