--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>NFT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js"></script>
-    <link rel="stylesheet" href="./style/home/layout.css">
+    <link rel="stylesheet" href="./style/general/layout.css">
     <link rel="stylesheet" href="./style/home/MQ.css">
     <link rel="stylesheet" href="./style/home/navbar.css">
     <link rel="stylesheet" href="./style/home/hero.css">
