login page finalized

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
             <div class="login__text">
                 <div class="login__title"><h1>Sign In</h1>
                 </div>
-                <div class="login__email-and-password">
+                <div class="login__credentials">
                     <div class="email">
                         <h4>Email</h4>
                         <input type="text">
@@ -29,10 +29,11 @@
                         <h4>Password</h4>
                         <input type="password">
                     </div>
+                    <div class="sign-in">
+                        <button class="sign-in__btn">Sign In</button>
+                    </div>
                 </div>
-                <div class="sign-in">
-                    <button class="sign-in__btn">Sign In</button>
-                </div>
+               
                 <p>New on our platform? <a class="create-account" href="#">Create an account</a></p>
                 <div class="or-box">
                     <span class="left-or"></span>
@@ -40,10 +41,10 @@
                     <span class="right-or"></span>
                 </div>
                 <div class="social-login">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-solid fa-envelope"></i>
-                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-facebook-f facebook"></i>
+                    <i class="fa-brands fa-twitter twitter"></i>
+                    <i class="fa-solid fa-envelope mail"></i>
+                    <i class="fa-brands fa-github github"></i>
                 </div>
             </div>
             
