--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <nav id="navbar" role="navigation">
         <div class="container">
-            <li class="navbar__wrapper">
+            <div class="navbar__wrapper">
                 <div class="navbar__logo">
                     <img src="./assets/axies-images/01_header/logo_dark.png" alt="">
                 </div>
@@ -40,6 +40,9 @@
                 </div>
                 <div class="navbar--modes">
                     <img class="navbar__button--light btn__secondary btn" onclick="toggleTheme()" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
+                </div>
+                <div class="rp-menu">
+                    <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
         </div>
