--- a/index.html
+++ b/index.html
@@ -6,16 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="./style/home/home-layout.css">
-    <link rel="stylesheet" href="./style/home/MQ.css">
-    <link rel="stylesheet" href="./style/home/navbar.css">
-    <link rel="stylesheet" href="./style/home/hero.css">
-    <link rel="stylesheet" href="./style/home/auctions.css">
-    <link rel="stylesheet" href="./style/home/collection.css">
-    <link rel="stylesheet" href="./style/home/seller.css">
-    <link rel="stylesheet" href="./style/home/today.css">
-    <link rel="stylesheet" href="./style/home/footer.css">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="home.css">
+    
     
 </head>
 <body>
