--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="navbar--home navbar__menu__item">
                       <div class="menu__item--wrapper">
                         <div class="navbar__menu__item">
-                            <p>Home</p>
+                            <a href="https://roozbehzhuleh.github.io/AxisNFTHome/" target="_blank">Home</a>
                         </div> 
                       </div>
                     </li>
@@ -41,9 +41,9 @@
                           </div> 
                           <div class="dropdown-menu__wrapper dropdown-menu--explore">
                               <ul class="dropdown-menu__list--explore">
-                                  <li class="dropdown-menu__item">Profile</li>
-                                  <li class="dropdown-menu__item">Sign Up</li>
-                                  <li class="dropdown-menu__item">Product</li>
+                                  <li class="dropdown-menu__item"><a href="https://roozbehzhuleh.github.io/AxisNFTProfile/">Profile</a></li>
+                                  <li class="dropdown-menu__item"><a href="https://roozbehzhuleh.github.io/AxisNFTLogin/">Login</a></li>
+                                  <li class="dropdown-menu__item"><a href="https://roozbehzhuleh.github.io/AxisNFTProduct/">Product</a></li>
                               </ul>
                           </div> 
                         </div>
