--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                           </div> 
                           <div class="dropdown-menu__wrapper dropdown-menu--explore">
                               <ul class="dropdown-menu__list--explore">
-                                  <li class="dropdown-menu__item"><a href="https://roozbehzhuleh.github.io/AxisNFTProfile/">Profile</a></li>
-                                  <li class="dropdown-menu__item"><a href="https://roozbehzhuleh.github.io/AxisNFTLogin/">Login</a></li>
-                                  <li class="dropdown-menu__item"><a href="https://roozbehzhuleh.github.io/AxisNFTProduct/">Product</a></li>
+                                  <li class="dropdown-menu__item explore__item"><a href="https://roozbehzhuleh.github.io/AxisNFTProfile/">Profile</a></li>
+                                  <li class="dropdown-menu__item explore__item"><a href="https://roozbehzhuleh.github.io/AxisNFTLogin/">Login</a></li>
+                                  <li class="dropdown-menu__item explore__item"><a href="https://roozbehzhuleh.github.io/AxisNFTProduct/">Product</a></li>
                               </ul>
                           </div> 
                         </div>
@@ -841,7 +841,7 @@
     </div>
 </section>
 
-
+<!-- footer -->
 <footer>
     <section class="footer">
         <div class="container">
