--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
                     <button class="btn btn__primary btn__wallet"><i class="fa-solid fa-wallet"></i><p>Wallet Connect</p></button>
                 </div>
                 <div class="navbar--modes">
-                    <img class="navbar__button--light btn__secondary btn" onclick="toggleTheme()" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
+                    <div class="navbar__profile__img">
+                        <img  src="./assets/axies-images/04_Top Seller/avt-4.jpg" alt="avatar">
+                    </div>
+                    <div class="navbar__button-light__div">
+                        <img class="navbar__button--light btn__secondary btn" onclick="toggleTheme()" src="./assets/axies-images/01_header/sun.png" alt="Light Mode">
+                    </div>
                 </div>
                 <div class="rp-menu">
                     <i class="fa-solid fa-bars"></i>
@@ -124,8 +129,8 @@
         
         <div class="hero__wrapper">
             <div class="hero__item--left">
-                <h1 class="hero__title">Discover and collect <br/>extraordinary <br/> <p class="word-monster">Monster</p> NFT's</h1>
-                <p class="secondary-text">Marketplace for Monster Character Collections Non Fngible Token NFT's</p>
+                <h1 class="hero__title">Discover and collect extraordinary <br/> <p class="word-monster">Monster</p>NFT's</h1>
+                <p class="secondary-text">Marketplace for Monster Character Collections Non Fungible Token NFT's</p>
                 <div class="hero__btns">
                     <button class="hero__btn hero__explore btn btn__primary"><i class="fa-solid fa-rocket"></i> Explore</button>
                     <button class="hero__btn hero__create btn btn__primary"><i class="fa-solid fa-plus"></i> Create</button>
