--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="container">
             <div class="navbar__wrapper">
                 <div class="navbar__logo">
-                    <img src="./assets/axies-images/01_header/logo_dark.png" alt="">
+                   <a href="https://roozbehzhuleh.github.io/AxisNFTHome">
+                    <img src="./assets/axies-images/01_header/logo_dark.png" alt="logo">
+                   </a> 
                 </div>
                 <ul class="navbar__menu">
                     <li class="navbar--home navbar__menu__item">
